<?xml version="1.0"?>
<package format="2">
  <name>tutorial_msgs</name>
  <version>0.0.0</version>
  <description>The tutorial_msgs package</description>


  <maintainer email="pjh@todo.todo">pjh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
